Fix editor overlay layout alignment

--- a/style.css
+++ b/style.css
@@ -180,7 +180,6 @@ main {
 #editor-content-container {
   position: relative;
   flex: 1;
-  display: grid;
   box-sizing: border-box;
   background-color: #ffffff;
   font-family: monospace;
@@ -188,13 +187,20 @@ main {
   line-height: 1.5;
   color: #003366;
   --editor-text-color: #003366;
+  --editor-padding-top: 1rem;
+  --editor-padding-right: 1rem;
+  --editor-padding-bottom: 1rem;
+  --editor-padding-left: 1rem;
 }
 
 #editor-pane textarea {
   flex: 1;
   width: 100%;
   height: 100%;
-  padding: 1rem;
+  padding: var(--editor-padding-top, 1rem)
+    var(--editor-padding-right, 1rem)
+    var(--editor-padding-bottom, 1rem)
+    var(--editor-padding-left, 1rem);
   box-sizing: border-box;
   border: none;
   resize: none;
@@ -203,26 +209,24 @@ main {
   outline: none;
   background-color: #ffffff;
   color: inherit;
-}
-
-#editor-content-container textarea,
-#editor-highlight {
-  grid-area: 1 / 1 / 2 / 2;
+  position: relative;
+  z-index: 2;
 }
 
 #editor-content-container.editor-highlight-enabled textarea {
   background-color: transparent;
   color: transparent;
   caret-color: var(--editor-text-color, #003366);
-  position: relative;
-  z-index: 2;
 }
 
 #editor-highlight {
-  align-self: stretch;
-  justify-self: stretch;
+  position: absolute;
+  inset: 0;
   display: none;
-  padding: 1rem;
+  padding: var(--editor-padding-top, 1rem)
+    var(--editor-padding-right, 1rem)
+    var(--editor-padding-bottom, 1rem)
+    var(--editor-padding-left, 1rem);
   box-sizing: border-box;
   pointer-events: none;
   background-color: inherit;
